# apex-ast

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  index.js  package-lock.json  package.json  pom.xml  pyproject.toml  run_parser.js  run_wasm.js  setup.py  tree-sitter.json  tsconfig.json  vitest.config.js
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-apex.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
documents/: Phase 1 - Project-Initilize.md  Phase 2 - Verify_project.md  Phase 3 - Synchronyize.md  Phase 4 - Deployment.md
documents/AA/: BRD.md  FSD.md  RLN.md  STATUS.json  STC.md  STP.md  TDD.md  UG.md  phase-expansion-tickets.json
documents/AA-1/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-2/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-3/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-4/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-55/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-56/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-57/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/AA-58/: BRD.md  FSD.md  STC.md  STP.md  TDD.md
documents/diagrams/: sdlc-workflow.drawio
documents/templates/: BRD-TEMPLATE.md  DESIGN-SYSTEM.md  DPG-TEMPLATE.md  FSD-TEMPLATE.md  RLN-TEMPLATE.md  SECURITY-REPORT-TEMPLATE.md  (+6 more)
scripts/: create-jira-tickets.js
src/: grammar.json
(+74 files in other folders)
